Fixed a bug where the text input error state border color would be wrong in the vibrant, dark and high contrast.

--- a/src/themes/theme-uplift-contrast.scss
+++ b/src/themes/theme-uplift-contrast.scss
@@ -327,7 +327,6 @@ $error-page-bg-color: $theme-color-palette-graphite-20;
 $error-page-content-bg-color: $theme-color-palette-graphite-10;
 $error-page-title-color: $theme-color-palette-black;
 $error-page-info-color: $label-color;
-$error-border-color: $theme-color-palette-graphite-60;
 $error-box-shadow: 0 2px 5px $drop-shadow-depth;
 
 //Skip Link
